--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "markdown": "^0.5.0",
     "markdown-it": "^8.2.2",
     "vue": "^2.1.0",
-    "vue-resource": "^1.0.3",
-    "webtorrent": "^0.98.3"
+    "vue-resource": "^1.0.3"
   },
   "devDependencies": {
     "autoprefixer": "^6.4.0",
