--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "hyacinth",
-  "version": "1.0.0",
-  "description": "A stand-alone reader using BitTorrent.",
+  "version": "1.3.1",
+  "description": "A mobile-friendly reader powered by Vue 2.",
   "author": "Gitai <i@gitai.me>",
   "private": true,
   "scripts": {
@@ -16,9 +16,9 @@
     "front-matter": "^2.1.1",
     "fs": "^0.0.1-security",
     "markdown": "^0.5.0",
-    "markdown-it": "^8.2.2",
     "vue": "^2.1.0",
-    "vue-resource": "^1.0.3"
+    "vue-resource": "^1.0.3",
+    "vuex": "^2.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.4.0",
