--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hyacinth",
-  "version": "1.3.1",
+  "version": "1.3.2",
   "description": "A mobile-friendly reader powered by Vue 2.",
   "author": "Gitai <i@gitai.me>",
   "private": true,
@@ -19,6 +19,7 @@
     "markdown": "^0.5.0",
     "vue": "^2.1.0",
     "vue-resource": "^1.0.3",
+    "vue-router": "^2.2.0",
     "vuex": "^2.1.1"
   },
   "devDependencies": {
